--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-on-rails": "11.3.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
