Add foundation css framework

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "foundation-sites": "^6.6.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-foundation": "^0.9.6",
     "react-on-rails": "11.3.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
