--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "core-js": "^3.6.4",
+    "cross-fetch": "^3.0.4",
     "formik": "^2.1.3",
     "foundation-sites": "^6.6.1",
     "prop-types": "^15.7.2",
@@ -18,6 +20,7 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "regenerator-runtime": "^0.13.3",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
