--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "core-js": "^3.6.4",
     "cross-fetch": "^3.0.4",
     "formik": "^2.1.3",
-    "foundation-sites": "^6.6.1",
+    "foundation-sites": "=6.6.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
