--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-on-rails": "11.3.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.13.3",
