--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.13.3",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "underscore": "^1.9.2"
   },
   "version": "0.1.0",
   "devDependencies": {
