--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-foundation": "^0.9.6",
+    "react-loader-spinner": "^3.1.5",
     "react-on-rails": "11.3.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
