--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.12.0",
     "react-foundation": "^0.9.6",
     "react-loader-spinner": "^3.1.5",
+    "react-modal": "^3.11.2",
     "react-on-rails": "11.3.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
