--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "antd": "^4.1.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "core-js": "^3.6.4",
     "cross-fetch": "^3.0.4",
     "formik": "^2.1.3",
-    "foundation-sites": "=6.6.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -30,12 +30,15 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "babel-plugin-import": "^1.13.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
     "webpack-dev-server": "^3.10.1"
   }
 }
