--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nutri_view",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.1.0",
     "@babel/preset-react": "^7.7.4",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
