--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "core-js": "^3.6.4",
     "cross-fetch": "^3.0.4",
     "formik": "^2.1.3",
+    "humps": "^2.0.1",
+    "lodash": "^4.17.15",
+    "normalizr": "^3.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -25,8 +28,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.13.3",
-    "turbolinks": "^5.2.0",
-    "underscore": "^1.9.2"
+    "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
