--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "nutri_view",
-  "private": true,
+  "private": false,
+  "engines": {
+    "node": "12.14.0",
+    "npm": "6.13.4",
+    "yarn": "1.22.0"
+  },
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
     "@babel/preset-react": "^7.7.4",
