--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.6.4",
     "cross-fetch": "^3.0.4",
     "humps": "^2.0.1",
+    "immer": "^7.0.9",
     "lodash": "^4.17.15",
     "normalizr": "^3.6.0",
     "prop-types": "^15.7.2",
